# story2movie

./: README.md  audio_generator.py  main.py  narrative_parser.py  pyproject.toml  requirements.txt  video_assembler.py  visuals_generator.py
