[project]
name = "story2movie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.47.0",
    "diffusers>=0.35.1",
    "huggingface-hub>=0.34.5",
    "numpy>=2.3.3",
    "scipy>=1.16.2",
    "speechbrain>=1.0.3",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
